# lab1

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run.ps1
chain/: __init__.py  analyzer.py  builder.py  client.py  decoder.py  erc20_approve.py  errors.py  helpers.py  multicall.py  nonce_manager.py  uniswap_v2_events.py  uniswap_v2_router.py  uniswap_v3_router.py  validation.py  ws_env.py
config/: config.py
core/: __init__.py  _secret_str.py  errors.py  logging_config.py  serializer.py  types.py  validation.py  wallet.py
docs/: Week1.md  Week2.md  Week3.md  Week4.md  Week5.md  setup.md
docs/dailyEntries/: day1.md  day2.md  day3.md  day4.md
exchange/: client.py  local_l2_book.py  orderbook.py  orderbook_ws_runner.py  rate_limiter.py  ws_depth_adapters.py
executor/: circuit_breaker.py  engine.py  live_dex_leg.py  replay_protection.py  webhook_alerts.py
inventory/: __init__.py  arb_opportunity_logger.py  fee_tokens.py  pnl.py  pnl_charts.py  rebalancer.py  tracker.py  usd_mark.py
monitoring/: __init__.py  daily_summary.py  health_state.py  logging_setup.py  prometheus_metrics.py  telegram_alerts.py  telegram_control.py  trade_csv_log.py
pricing/: arbitrage_scanner.py  arbitrage_types.py  batch_quote.py  dynamic_gas_usd.py  etherscan_gas.py  fork_simulator.py  fork_swap_executor.py  gas_cost.py  historical_price_impact.py  liquidity_graph.py  liquidity_pool.py  mempool_monitor.py  parsed_swap.py  price_impact_analyzer.py  pricing_engine.py  raw_amount_list.py  route.py  route_batch_quote.py  route_finder.py  tx_fee_usd.py  uniswap_v2_discovery.py  uniswap_v2_pair.py  uniswap_v3_discovery.py  uniswap_v3_pool.py  uniswap_v3_quoter.py  v2_pool_price_feed.py  v3_pool_price_feed.py
reports/: advanced_strategy_analysis.md  final_report.md
risk/: __init__.py  kill_switch.py  limits.py  manager.py  pre_trade.py  safety.py
safety/: __init__.py
scripts/: arb_bot.py  arb_checker.py  integration_test_week1.py  inventory_dashboard.py  orderbook_ws_stream.py  pnl_demo.py  portfolio_snapshot.py  pricing_arbitrage_scan.py  pricing_best_route.py  pricing_historical_impact.py  pricing_impact_table.py  pricing_mempool_monitor.py  pricing_ws_price_feed.py  show_lab.ps1  start_fork.ps1
src/: main.py
strategy/: dex_token_resolver.py  fees.py  generator.py  scorer.py  signal.py  signal_priority.py
tests/: test_aam_pricer.py  test_arb_bot_dry_run.py  test_arb_checker.py  test_arb_opportunity_logger.py  test_arbitrage_scanner.py  test_balance_verify.py  test_chain_analyzer.py  test_chain_builder.py  test_chain_client.py  test_chain_decoder.py  test_chain_helpers.py  test_chain_nonce_manager.py  test_dex_token_resolver.py  test_dry_run_signed.py  test_dynamic_gas_usd.py  test_engine.py  test_erc20_approve.py  test_etherscan_gas.py  test_exchange_client.py  test_fork_simulator.py  test_fork_simulator_integration.py  test_fork_swap_executor.py  test_gas_cost.py  test_historical_price_impact.py  test_inventory.py  test_kill_switch.py  test_liquidity_graph.py  test_live_dex_leg_unit.py  test_local_l2_book.py  test_logic.py  test_mempool_monitor.py  test_multicall.py  test_orderbook.py  test_pnl_charts.py  test_pool_refresh_throttle.py  test_pre_trade_validator.py  test_pricing_engine.py  test_raw_amount_list.py  test_recovery.py  test_risk_manager.py  (+25 more)
