[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "lab1"
version = "0.1.0"
dependencies = [
    "python-dotenv", # For secrets management
    "eth-account", # For signing messages and transactions
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# This is the new standard location for rules
select = ["E", "F", "I", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
