[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "lab1"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "ccxt", # Cryptocurrency exchange API
    "python-dotenv", # For secrets management
    "eth-account", # For signing messages and transactions
    "web3>=6.0.0", # For Ethereum RPC and ABI interaction
    "eth-abi>=4.0.0", # For manual ABI encoding/decoding in TransactionDecoder
    "eth-utils>=2.0.0", # Address checksumming, keccak (used directly; also pulled by web3)
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.3.0",
    "pre-commit>=3.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# This is the new standard location for rules
select = ["E", "F", "I", "B"]

[tool.ruff.lint.per-file-ignores]
# CLI entrypoints insert repo root on sys.path before third-party / local imports.
"scripts/pricing_impact_table.py" = ["E402", "I001"]
"scripts/pricing_best_route.py" = ["E402", "I001"]
"scripts/pricing_mempool_monitor.py" = ["E402", "I001"]
"scripts/pricing_arbitrage_scan.py" = ["E402", "I001"]
"scripts/arb_checker.py" = ["E402", "I001"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Project root must be on sys.path so `import core` / `import chain` work without PYTHONPATH hacks.
pythonpath = ["."]
markers = [
    "integration: live Sepolia tests; requires PRIVATE_KEY and test ETH",
    "fork: local Anvil fork; set FORK_RPC_URL (skipped if unset or unreachable)",
]
# web3 pulls websockets.legacy on import; upstream deprecation until web3 switches providers.
filterwarnings = [
    "ignore:websockets.legacy is deprecated:DeprecationWarning",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "chain*", "pricing*", "exchange*", "inventory*", "scripts*"]
